--- a/homepage.html
+++ b/homepage.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title rel ="stylesheet" href="mystylesheet.css" type ="text/css" />
+        <title>Curriculum vitae</title>
+        <link rel ="stylesheet" href="mystylesheet.css" type ="text/css"/>
     </head>
             
     <body>
