--- a/homepage.html
+++ b/homepage.html
@@ -9,5 +9,7 @@
         <h1 class="mainheading">117326763 - IS1113 Project</h1>
         
         <a href="cv_page1.html">Curriculum Vitae</a>
+        <a href="Interests/sports.html">Interests</a>
+        <a href="Interests/travel.html">Travel</a>
     </body>
 </html>
