--- a/Interests/sports.html
+++ b/Interests/sports.html
@@ -13,9 +13,9 @@
     <body>
         <h1 class="mainheading">Sports</h1>
         
-        <p><strong>Favourite Sport:</strong> Basketball</p>
-        <p><strong>Training:</strong> No</p>
+        <p><strong>Favourite Sport: </strong>Soccer</p>
+        <p><strong>Training: </strong>Yes</p>
         
-         <a href="travel.html" class="btn btn-dark"  >Next</a>
+         <a href="travel.html" class="btn btn-dark">Next</a>
     </body>
 </html>
