--- a/cv_page1.html
+++ b/cv_page1.html
@@ -15,8 +15,8 @@
         <h1 class="mainheading">Personal Details</h1>
         
         <p><strong>Name: </strong>Leo Cheung</p>
-        <p><strong>Address: </strong>*</p>
-        <p><strong>Phone: </strong>*</p>
+        <p><strong>Address: </strong>***********</p>
+        <p><strong>Phone: </strong>************</p>
         <p><strong>Email: </strong>leoc@email.com</p>
         
         <a href="cv_page2.html" class="btn btn-dark">Next</a>
