--- a/Interests/sports.html
+++ b/Interests/sports.html
@@ -15,7 +15,7 @@
         
         <p><strong>Favourite Sport: </strong>Soccer</p>
         <p><strong>Training: </strong>Yes</p>
-        
+        <p><strong>Team: </strong>UCC</p>
          <a href="travel.html" class="btn btn-dark">Next</a>
     </body>
 </html>
