--- a/cv_page2.html
+++ b/cv_page2.html
@@ -12,7 +12,7 @@
         
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body id ="body">
         <h1 class="mainheading">Educational Details</h1>
         
         <p><strong>Secondary School: </strong>Presntation Brothers College</p>
