--- a/cv_page3.html
+++ b/cv_page3.html
@@ -11,7 +11,7 @@
         
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </head>
-    <body>
+    <body id = "body">
         <h1 class="mainheading">Work Experience</h1>
         
         <p><strong>Company: </strong>Dunnes Stores</p>
