--- a/Interests/travel.html
+++ b/Interests/travel.html
@@ -27,7 +27,7 @@
 	<body>
 	    <div id="pagepiling">
 	<div class="section" id="section1">Most travelled to: Spain</div>
-	<div class="section" id="section2">Want to visit: US</div>
+	<div class="section" id="section2">Want to visit: USA</div>
 	<div class="section" id="section3">Settle in: Ireland
 	    <br/>
 	    <a href="../homepage.html" class = "btn btn-success">Home</a>
