--- a/homepage.html
+++ b/homepage.html
@@ -15,6 +15,7 @@
             <li><a href="cv_page1.html">Curriculum Vitae</a></li>
             <li><a href="Interests/sports.html">Interests/Sports</a></li>
             <li><a href="Interests/travel.html">Travel</a></li>
+            <li><a class ="eBusiness" href="ebusiness/Ebus1.php">eBusiness</a></li>
         </ul>
     </nav>
     
