--- a/homepage.html
+++ b/homepage.html
@@ -13,7 +13,7 @@
     <nav class = "nav">
         <ul>
             <li><a href="cv_page1.html">Curriculum Vitae</a></li>
-            <li><a href="Interests/sports.html">Interests/Sports</a></li>
+            <li><a href="Interests/sports.html">Interests</a></li>
             <li><a href="Interests/travel.html">Travel</a></li>
             <li class ="eBusiness"><a href="ebusiness/Ebus1.php">eBusiness</a></li>
         </ul>
