--- a/cv_page3.html
+++ b/cv_page3.html
@@ -12,6 +12,15 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     </head>
     <body id = "body">
+        
+         <nav>
+        <ul>
+            <li><a href="homepage.html">Homepage</a></li>
+            <li><a href="Interests/sports.html">Interests</a></li>
+            <li><a href="Interests/travel.html">Travel</a></li>
+            <li class ="eBusiness"><a href="ebusiness/Ebus1.php">eBusiness</a></li>
+        </ul>
+    </nav>
         <h1 class="mainheading">Work Experience</h1>
         
         <p><strong>Company: </strong>Dunnes Stores</p>
