--- a/Interests/travel.html
+++ b/Interests/travel.html
@@ -29,7 +29,7 @@
 	    <div id="pagepiling">
 	        <div class="section" id="section1">Most travelled to: Spain</div>
 	        <div class="section" id="section2">Want to visit: USA</div>
-	        <div class="section" id="section3">Settle in: Ireland
+	        <div class="section" id="section3">Settle in: Germany </div>
 	        <br/>
 	        <a href="../homepage.html" class = "btn btn-success">Home</a>
 	    </div>
