--- a/Interests/travel.html
+++ b/Interests/travel.html
@@ -27,9 +27,9 @@
 	</head>
 	<body>
 	    <div id="pagepiling">
-	        <div class="section" id="section1">Most travelled to: Spain</div>
+	        <div class="section" id="section1">Most travelled to: Barcelona ,Spain</div>
 	        <div class="section" id="section2">Want to visit: USA</div>
-	        <div class="section" id="section3">Settle in: Germany </div>
+	        <div class="section" id="section3">Settle in: Berlin ,Germany 
 	        <br/>
 	        <a href="../homepage.html" class = "btn btn-success">Home</a>
 	    </div>
