--- a/Interests/sports.html
+++ b/Interests/sports.html
@@ -25,9 +25,10 @@
         <nav>
         <ul>
             <li><a href="../homepage.html">Homepage</a></li>
-            <li><a href="../cp_page1.html">Curriculum Vitae</a></li>
+            <li><a href="../cv_page1.html">Curriculum Vitae</a></li>
             <li><a href="../Interests/travel.html">Travel</a></li>
-            <li class ="eBusiness"><a href="ebusiness/Ebus1.php">eBusiness</a></li>
+            <li><a href="Interests/cloudservices.html">Cloud Services</a></li>
+            <li class ="eBusiness"><a href="ebusiness/company.html">eBusiness</a></li>
         </ul>
     </nav> 
     
