--- a/cv_page1.html
+++ b/cv_page1.html
@@ -21,7 +21,8 @@
             <li><a href="homepage.html">Homepage</a></li>
             <li><a href="Interests/sports.html">Interests</a></li>
             <li><a href="Interests/travel.html">Travel</a></li>
-            <li class ="eBusiness"><a href="ebusiness/Ebus1.php">eBusiness</a></li>
+            <li><a href="Interests/cloudservices.html">Cloud Services</a></li>
+            <li class ="eBusiness"><a href="ebusiness/company.html">eBusiness</a></li>
         </ul>
     </nav>
    
