--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,8 @@
             <li><a href="cv_page1.html">Curriculum Vitae</a></li>
             <li><a href="Interests/sports.html">Interests</a></li>
             <li><a href="Interests/travel.html">Travel</a></li>
-            <li class ="eBusiness"><a href="ebusiness/Ebus1.php">eBusiness</a></li>
+            <li><a href="Interests/cloudservices.html">Cloud Services</a></li>
+            <li class ="eBusiness"><a href="ebusiness/company.html">eBusiness</a></li>
         </ul>
     </nav>
     
