--- a/Interests/cloudservices.html
+++ b/Interests/cloudservices.html
@@ -15,7 +15,7 @@
                     <li><a href="cloud9.html">PaaS</a></li>
                     <li><a href="amazon.html">IaaS</a></li>
                     <li><a href="gmail.html">CaaS</a></li>
-                    <li class ="eBusiness"><a href="ebusiness/company.html">eBusiness</a></li>
+                    <li class ="eBusiness"><a href="../ebusiness/company.html">eBusiness</a></li>
                 </ul>
             </nav>
             
