--- a/ebusiness/company.html
+++ b/ebusiness/company.html
@@ -13,7 +13,7 @@
                     <li><a href="../Interests/sports.html">Interests</a></li>
                     <li><a href="../Interests/travel.html">Travel</a></li>
                     <li><a href="../Interests/cloudservices.html">Cloud Services</a></li>
-                    <li class ="eBusiness"><a href="ebusiness/Ebus1.php">eBusiness</a></li>
+                    <li class ="eBusiness"><a href="company.html">eBusiness</a></li>
                 </ul>
             </nav>
             
