--- a/ebusiness/company.html
+++ b/ebusiness/company.html
@@ -38,7 +38,7 @@
             <br/>
                 
             </div>
-                <a href= "Ebus1.php"><button class="btnCompany">Shop</button></a>
+                <a href= "Ebus1.php"><button class="btnNext">Shop</button></a>
         </div>
         
     </body>
