--- a/Interests/cloud9.html
+++ b/Interests/cloud9.html
@@ -15,7 +15,7 @@
                     <li><a href="cloud9.html">PaaS</a></li>
                     <li><a href="amazon.html">IaaS</a></li>
                     <li><a href="gmail.html">CaaS</a></li>
-                    <li class ="eBusiness"><a href="ebusiness/company.html">eBusiness</a></li>
+                    <li class ="eBusiness"><a href="../ebusiness/company.html">eBusiness</a></li>
                 </ul>
             </nav>
             <br/>
@@ -82,7 +82,7 @@
                 <br/>
                 <br/>
                 </div>
-                <a href= "amazon.html"><button class="btninfo">Next</button></a>  
+                <a href= "amazon.html"><button class="btnNext">Next</button></a>  
             </div>
             
             
