--- a/Interests/gmail.html
+++ b/Interests/gmail.html
@@ -15,7 +15,7 @@
                     <li><a href="cloud9.html">PaaS</a></li>
                     <li><a href="amazon.html">IaaS</a></li>
                     <li><a href="gmail.html">CaaS</a></li>
-                    <li class ="eBusiness"><a href="ebusiness/company.html">eBusiness</a></li>>
+                    <li class ="eBusiness"><a href="../ebusiness/company.html">eBusiness</a></li>>
                 </ul>
             </nav>
             <br/>
@@ -82,7 +82,8 @@
                 <br/>
                 <br/>
                 </div>
-                <a href= "cloudservices.html"><button class="btninfo">Cloud Services</button></a>  
+                <a href= "../ebusiness/Ebus1.php"><button class="btnShop">Shop</button></a>
+                <a href= "cloudservices.html"><button class="btnNext">Cloud Services</button></a>  
             </div>
             
             
