--- a/Interests/salesforce.html
+++ b/Interests/salesforce.html
@@ -15,7 +15,7 @@
                     <li><a href="cloud9.html">PaaS</a></li>
                     <li><a href="amazon.html">IaaS</a></li>
                     <li><a href="gmail.html">CaaS</a></li>
-                    <li class ="eBusiness"><a href="ebusiness/company.html">eBusiness</a></li>
+                    <li class ="eBusiness"><a href="../ebusiness/company.html">eBusiness</a></li>
                 </ul>
             </nav>
             <br/>
@@ -84,7 +84,7 @@
                 </div>
                 <br/>
                 <br/>
-                <a href= "cloud9.html"><button class="btninfo">Next</button></a>  
+                <a href= "cloud9.html"><button class="btnNext">Next</button></a>  
             </div>
 
         </div>
