--- a/Interests/travel.html
+++ b/Interests/travel.html
@@ -31,8 +31,8 @@
 	        <div class="section" id="section2">Want to visit: USA</div>
 	        <div class="section" id="section3">Settle in: Berlin ,Germany 
 	        <br/>
-	        <a href="../homepage.html" class = "btn btn-success">Home</a>
+	        <a href="../homepage.html" class = "btnHome">Home</a>
 	    </div>
 	
-</div>
+        </div>
 	</body>
