--- a/Interests/travel.html
+++ b/Interests/travel.html
@@ -25,7 +25,7 @@
 	</script>
 	
 	</head>
-	<body>
+	<body id ="mainbody">
 	    <div id="pagepiling">
 	        <div class="section" id="section1">Most travelled to: Barcelona ,Spain</div>
 	        <div class="section" id="section2">Want to visit: USA</div>
