--- a/homepage.html
+++ b/homepage.html
@@ -28,6 +28,17 @@
                     <img src="http://www.nanostuffs.com/images/heroku-logo.png" title="Click for my Heroku" width ="1008" height="417">
                 </a>
                 
+            <footer>
+                <center>
+    				<p>
+    					<small>
+    					<strong>&copy;To assit with my project i used <a href="https://www.w3schools.com/">W3Schools</a></strong>
+    					</small>
+    				</p>
+				</center>
+			</footer>
+			
+
     
         </div>
     </body>
