--- a/homepage.html
+++ b/homepage.html
@@ -36,7 +36,7 @@
                 <center>
     				<p>
     					<small>
-    					<strong>&copy;To assit with my project i used <a href="https://www.w3schools.com/">W3Schools</a></strong>
+    					<strong>&copy;To assist with my project i used <a href="https://www.w3schools.com/">W3Schools</a></strong>
     					</small>
     				</p>
 				</center>
