--- a/homepage.html
+++ b/homepage.html
@@ -24,7 +24,7 @@
              <h1 class="mainheading">117326763 - IS1113 Project</h1>
              
                 <!--Images and links to github and heroku-->       
-                <a href ="https://github.com/leocheung1999">
+                <a href ="https://github.com/leocheung1999/IS1113117326763/graphs/commit-activity">
                     <img src="https://sites.udel.edu/enesavc/files/2017/10/1-1hh3nl3.png" title="Click for my GitHub" alt="Github" width ="1008" height="417">
                 </a>
     
