--- a/homepage.html
+++ b/homepage.html
@@ -28,7 +28,7 @@
                     <img src="https://sites.udel.edu/enesavc/files/2017/10/1-1hh3nl3.png" title="Click for my GitHub" alt="Github" width ="1008" height="417">
                 </a>
     
-                <a href ="https://dashboard.heroku.com/apps/is1113117326763">
+                <a href ="https://is1113117326763.herokuapp.com/">
                     <img src="http://www.nanostuffs.com/images/heroku-logo.png" title="Click for my Heroku" alt="Heroku" width ="1008" height="417">
                 </a>
                 
