--- a/Interests/sports.html
+++ b/Interests/sports.html
@@ -36,7 +36,7 @@
                     <p>N'Golo Kante is a French Central Midfielder who plays for Chelsea FC.
                     He is 26 years old and wear the number 7 for Chelsea</p>
                     <p>Kante is my favourite player as he shows great desire for the game of soccer. I really like how Kante senses danger and knows exactly where the ball is going to be.</p>
-                    <p>Kante works hard and has proved this by winning 2 English Premier League Titles with Leicester and Chelsea </p>
+                    <p>Kante works hard,great determination and has proved this by winning 2 English Premier League Titles with Leicester and Chelsea </p>
         
                     <img src ="http://www.telegraph.co.uk/content/dam/football/2016/04/28/96248415-Ngolo-Kante-SPORT_trans_NvBQzQNjv4BqZgEkZX3M936N5BQK4Va8RWtT0gK_6EfZT336f62EI5U.jpg?imwidth=450"width="400" heigh="250"/>
         
