--- a/cv_page2.html
+++ b/cv_page2.html
@@ -35,9 +35,11 @@
              <!--Div for the main text-->
             <div id="maintext">   
                 <p><strong>Secondary School: </strong>Presntation Brothers College</p>
+                <p><strong>Course:</strong>Leaving Certificate</p>
                 <p><strong>Year: </strong>2011-2017</p>
         
                 <br/>
+                 <hr style="height:1px;border:none;color:#333;background-color:#333;"/>
                 <br/>
     
                 <p><strong>College: </strong>UCC</p>
