--- a/cv_page3.html
+++ b/cv_page3.html
@@ -49,7 +49,9 @@
                     </ul>
                 </div>
                 <br/>
+                
                 <br/>
+                <hr style="height:1px;border:none;color:#333;background-color:#333;"/>
                 <br/>
                     <p><strong>Company: </strong>Chinese Restaurant</p>
                     <p><strong>Job Title: </strong>Waiter</p>
