--- a/ebusiness/company.html
+++ b/ebusiness/company.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8"/>
         <title>Buzz and Ronny's Cloud Services</title>
         
         <!--Link to CSS-->
