--- a/homepage.html
+++ b/homepage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8"/>
         <title>117326763</title>
         <!--Link to CSS-->
         <link rel ="stylesheet" href="mystylesheet.css" type ="text/css"/>
